--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "scripts": {
     "dev": "gulp watch",
-    "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "log": "gulp",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "[my-framework] build --output public"
   },
   "keywords": [],
   "author": "",
