--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "dev": "gulp watch",
     "log": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "[my-framework] build --output public"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
