--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "gulp watch",
     "build": "gulp",
+    "log": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
